added html routes

--- a/app/views/client/products/index.html.erb
+++ b/app/views/client/products/index.html.erb
@@ -1,5 +1,5 @@
 <% @products.each do |product| %>
-  <h2>Product: <%= product["name"] %></h2>
+ <h2><a href="/client/products/<%= product["id"] %>"><%= product["name"] %></a></h2>
   <h3>Price(USD): <%= product["price"] %></h3>
   <h3><%= product["image_url"] %></h3>
   <h4>Description: <%= product["description"] %></h4>
