added all routes to client

--- a/app/views/client/products/show.html.erb
+++ b/app/views/client/products/show.html.erb
@@ -5,3 +5,4 @@
 <img src="<%= @product['image_url'] %>" alt="">
 <br>
 <a href="/client/products/<%= @product['id'] %>/edit">Edit</a>
+<a href="/client/products/<%= @product['id'] %>" data-method="delete">Delete</a>
