--- a/app/views/client/products/index.html.erb
+++ b/app/views/client/products/index.html.erb
@@ -1,7 +1,15 @@
 <% @products.each do |product| %>
  <h2><a href="/client/products/<%= product["id"] %>"><%= product["name"] %></a></h2>
-  <h3>Price(USD): <%= product["price"] %></h3>
-  <h3><%= product["image_url"] %></h3>
+
+  <% if product["discounted"] %>
+    <h3>Discount Item! </h3>
+  <% else %>
+    <h3>Everyday Value! </h3>
+  <% end %>
+
+
+  <h3 style="color: red;"><%= product["formatted"]["price"] %></h3>
   <h4>Description: <%= product["description"] %></h4>
+  <img src="<%= product["image_url"] %>" alt="" >
   
 <% end %>
