--- a/app/views/client/products/show.html.erb
+++ b/app/views/client/products/show.html.erb
@@ -1,6 +1,7 @@
 <h2><%= @product["name"] %></h2>
-<h3>Price: <%= @product["price"] %></h3>
-<h4>Image URL: <%= @product["image_url"] %></h4>
+<h3>Price: <%= @product["formatted"]["price"] %></h3>
+<h3>Tax: <%= @product["formatted"]["tax"] %></h3>
+<h3>Total: <%= @product["formatted"]["total"] %></h3>
 <h4>Description: <%= @product["description"] %></h4>
 <img src="<%= @product['image_url'] %>" alt="">
 <br>
