--- a/app/views/client/products/edit.html.erb
+++ b/app/views/client/products/edit.html.erb
@@ -6,12 +6,11 @@
     Price: <input type="text" name="price" value="<%= @product['price']%>">
   </div>
   <div>
-    Image URL: <input type="text" name="image_url" value="<%= @product['image_url']%>">
-  </div>
-  <div>
     Description: <input type="text" name="description" value="<%= @product['description']%>">
   </div>
-   
+  <div>
+   Supplier ID: <input type="text" name="supplier_id" value="<%= @product['supplier_id'] %>">
+  </div>
 
   <input type="submit" value="Update Product" >
 
