--- a/app/views/client/products/new.html.erb
+++ b/app/views/client/products/new.html.erb
@@ -7,13 +7,10 @@
     Price: <input type="text" name="price">
   </div>
   <div>
-    Image URL: <input type="text" name="image_url">
-  </div>
-  <div>
     Description: <input type="text" name="description">
-  </div>
-  >
-  </div>
+
+  <div>
+    Supplier ID: <input type="text" name="supplier_id">
 
   <input type="submit" value="Create Product">
   
