--- a/app/views/client/products/show.html.erb
+++ b/app/views/client/products/show.html.erb
@@ -3,7 +3,14 @@
 <h3>Tax: <%= @product["formatted"]["tax"] %></h3>
 <h3>Total: <%= @product["formatted"]["total"] %></h3>
 <h4>Description: <%= @product["description"] %></h4>
-<img src="<%= @product['image_url'] %>" alt="">
-<br>
+
+<% @product["images"].each do |image| %>
+
+<img src="<%= image["url"] %>">
+<% end %>
+
+<h4>Supplier: <%= @product["supplier"]["name"] %></h4>
+
+
 <a href="/client/products/<%= @product['id'] %>/edit">Edit</a>
 <a href="/client/products/<%= @product['id'] %>" data-method="delete">Delete</a>
