--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   <body>
     <a href="/">Home</a>
     <a href="/client/products/new">New Product</a>
+    
+    <a href="/signup">Sign Up!</a>
+    <a href="/login">Log In</a>
+    <a href="/logout" data-method="delete">Log Out</a>
+
+
 
     <% flash.each do |name, message| %>
       <%= message %>
