--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
+<!-- views/layouts/application.html.erb -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MiniCapstoneClient</title>
+    <title>MiniCapstone</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -9,17 +10,19 @@
   </head>
 
   <body>
-    <a href="/">Home</a>
+    <a href="/client/products">Home</a>
     <a href="/client/products/new">New Product</a>
-    
-    <a href="/signup">Sign Up!</a>
+    <br>
+    <a href="/signup">Sign Up</a>
     <a href="/login">Log In</a>
     <a href="/logout" data-method="delete">Log Out</a>
-
-
+    <br>
+    <% if @jwt %>
+      <h4>You are signed in</h4>
+    <% end %>
 
     <% flash.each do |name, message| %>
-      <%= message %>
+      <p><%= message %></p>
     <% end %>
 
     <%= yield %>
