added admin accesibility

--- a/app/views/client/orders/show.html.erb
+++ b/app/views/client/orders/show.html.erb
@@ -1,12 +1,18 @@
-<h1>Order #43443 <%= @order['id']%></h1>
-<h6>Purchased On: <%= @order['purchased_on'] %></h6>
+<h1>Order #467000<%= @order['id'] %></h1>
+<h6>purchased on <%= @order['purchased_on'] %></h6>
 <h2>Customer: <%= @order['user']['email'] %></h2>
 
-<h2>Product Name: <%= @order['product']['name'] %></h2>
+<ul>
+  <% @order['carted_products'].each do |carted_product| %>
+    <li>
+      <%= carted_product["product"]["name"] %> - 
+      <%= carted_product["product"]["price"] %> x 
+      <%= carted_product["quantity"] %>
+    </li>
+  <% end %>
+</ul>
 
-<img src ="<%= @order['product']['images'][0]['url'] %>">
-<h2>Price: <%= @order['product']['formatted']['price'] %></h2>
-<h2>Quantity: <%= @order['quantity'] %></h2>
-<h2>Subtotal: <%= @order['formatted']['subtotal']%></h2>
-<h2>Tax: <%= @order['formatted']['tax']%></h2>
-<h2>Total: <%= @order['formatted']['total']%></h2>
+
+<h2>Subtotal: <%= @order['formatted']['subtotal'] %></h2>
+<h2>Tax: <%= @order['formatted']['tax'] %></h2>
+<h2>Total: <%= @order['formatted']['total'] %></h2>
