--- a/app/views/client/products/show.html.erb
+++ b/app/views/client/products/show.html.erb
@@ -9,13 +9,12 @@
 <% end %>
 <br>
 
-<%= form_tag "/client/orders", method: :post do %>
-<input type="hidden" name="product_id" value="<%= @product['id'] %>">
- 
+<%= form_tag "/client/carted_products", method: :post do %>
+  <input type="hidden" name="product_id" value="<%= @product['id'] %>">
   <div>
     Quantity: <input type="text" name="quantity">
   </div>
-  <input type="submit" value="Create Order">
+  <input type="submit" value="Add To Cart">
 <% end %>
 
 <h6>Supplier: <%= @product["supplier"]["name"] %></h6>
