--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
     <title>MiniCapstone</title>
     <%= csrf_meta_tags %>
 
@@ -10,23 +13,67 @@
   </head>
 
   <body>
-    <a href="/client/products">Home</a>
-    <a href="/client/products/new">New Product</a>
-    <br>
-    <a href="/signup">Sign Up</a>
-    <a href="/login">Log In</a>
-    <a href="/logout" data-method="delete">Log Out</a>
-    <br>
-    <a href="/client/carted_products">Cart</a>
-    <br>
-    <% if @jwt %>
-      <h4>You are signed in</h4>
-    <% end %>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Mini Capstone</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/client/products/new">New Product</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            
+            <% if @jwt %>
+              Signed In
+              <% else %>
+              Sign Up/Log In
+              <% end %>
+
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <% if @jwt %>
+                  <a class="dropdown-item" href="/logout" data-method="delete">Log Out</a>
+              <% else %>
+                <a class="dropdown-item" href="/signup">Sign Up</a>
+                <a class="dropdown-item" href="/login">Login</a>
+               <% end %>
+
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/client/carted_products">View Cart</a>
+            </div>
+          </li>
+
+        </ul>
+
+        <%= form_tag "/client/products", method: :get, class:"form-inline my-2 my-lg-0" do %>
+          <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
+           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <% end %>
+      </div>
+    </nav>
+
+
+   
 
     <% flash.each do |name, message| %>
       <p><%= message %></p>
     <% end %>
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
   </body>
 </html>
